# poetry-ja

./: .gitignore  .gitmodules  Makefile.am  Makefile.in  configure  configure.ac
build-aux/ctie/: Makefile.in  ctie.BAK  ctie.c
build-aux/m4/: progs.m4
build-aux/mk/: common_poetry.mk  common_website.mk  copy.mk  main_poetry.mk  main_website.mk
poetry/: Makefile.am  Makefile.in
poetry/docs/: Makefile.am  Makefile.in  _index.md.ch  basic-usage.md.ch  cli.md.ch  community.md.ch  configuration.md.ch  contributing.md.ch  dependency-specification.md.ch  faq.md.ch  libraries.md.ch  managing-dependencies.md.ch  managing-environments.md.ch  plugins.md.ch  pre-commit-hooks.md.ch  pyproject.md.ch  repositories.md.ch
website/: Makefile.am  Makefile.in
website/content/: Makefile.am  Makefile.in  _index.md.ch  history.md.ch
website/content/blog/: 2018-03-14-poetry-0-5-0-is-out.md.ch  2018-03-16-poetry-0-6-0-is-out.md.ch  2018-03-18-poetry-0-6-1-is-out.md.ch  2018-03-19-poetry-0-6-2-is-out.md.ch  2018-03-20-poetry-0-6-3-is-out.md.ch  2018-03-21-poetry-0-6-4-is-out.md.ch  2018-03-22-poetry-0-6-5-is-out.md.ch  2018-04-04-poetry-0-7-0-is-out.md.ch  2018-04-13-poetry-0-8-0-is-out.md.ch  2018-04-13-poetry-0-8-1-is-out.md.ch  2018-04-14-poetry-0-8-2-is-out.md.ch  2018-04-16-poetry-0-8-3-is-out.md.ch  2018-04-18-poetry-0-8-4-is-out.md.ch  2018-04-19-poetry-0-8-5-is-out.md.ch  2018-04-30-poetry-0-8-6-is-out.md.ch  2018-05-07-poetry-0-9-0-is-out.md.ch  2018-05-18-poetry-0-9-1-is-out.md.ch  2018-05-28-poetry-0-10-0-is-out.md.ch  2018-05-28-poetry-0-10-1-is-out.md.ch  2018-05-31-poetry-0-10-2-is-out.md.ch  2018-06-04-poetry-0-10-3-is-out.md.ch  2018-06-28-poetry-0-11-0-is-out.md.ch  2018-06-29-poetry-0-11-1-is-out.md.ch  2018-07-03-poetry-0-11-2-is-out.md.ch  2018-07-26-poetry-0-11-3-is-out.md.ch  2018-07-30-poetry-0-11-4-is-out.md.ch  2018-09-04-poetry-0-11-5-is-out.md.ch  2018-10-17-poetry-0-12-0-is-out.md.ch  2018-10-17-poetry-0-12-1-is-out.md.ch  2018-10-17-poetry-0-12-2-is-out.md.ch  2018-10-18-poetry-0-12-3-is-out.md.ch  2018-10-21-poetry-0-12-4-is-out.md.ch  2018-10-26-poetry-0-12-5-is-out.md.ch  2018-11-05-poetry-0-12-6-is-out.md.ch  2018-11-08-poetry-0-12-7-is-out.md.ch  2018-11-13-poetry-0-12-8-is-out.md.ch  2018-11-19-poetry-0-12-9-is-out.md.ch  2018-11-22-poetry-0-12-10-is-out.md.ch  2019-01-13-poetry-0-12-11-is-out.md.ch  2019-04-11-poetry-0-12-12-is-out.md.ch  (+49 more)
website/layouts/: Makefile.am  Makefile.in
website/layouts/partials/: Makefile.am  Makefile.in  blog_meta.html.ch  dark_mode.html.ch  dark_mode_switcher.html.ch  documentation_flyover.html.ch  footer.html.ch  head.html.ch  header.html.ch  header_docs.html.ch  scripts.html.ch  stylesheets.html.ch
