##
## This is part of Japanese translation version for Poetry's documantation.
##

bases = \
	_index.md                   \
	basic-usage.md              \
	cli.md                      \
	community.md                \
	configuration.md            \
	contributing.md             \
	dependency-specification.md \
	faq.md                      \
	libraries.md                \
	managing-dependencies.md    \
	managing-environments.md    \
	plugins.md                  \
	pre-commit-hooks.md         \
	pyproject.md                \
	repositories.md

include $(top_srcdir)/build-aux/mk/common_poetry.mk
include $(top_srcdir)/build-aux/mk/main_poetry.mk
