##
## This is part of Japanese translation version for Poetry's documantation.
##

bases = \
	blog_meta.html             \
	dark_mode.html             \
	dark_mode_switcher.html    \
	documentation_flyover.html \
	footer.html                \
	head.html                  \
	header.html                \
	header_docs.html           \
	scripts.html               \
	stylesheets.html

include $(top_srcdir)/build-aux/mk/common_website.mk
include $(top_srcdir)/build-aux/mk/main_website.mk
